Update issue templates

--- a/.github/ISSUE_TEMPLATE/버그-리포트.md
+++ b/.github/ISSUE_TEMPLATE/버그-리포트.md
@@ -1,8 +1,8 @@
 ---
 name: 버그 리포트
-about: 새로운 기능 개발에 대한 이슈를 생성합니다.
-title: "[Feature]"
-labels: enhancement
+about: 발생한 버그에 대한 이슈를 생성합니다.
+title: "[Bug]"
+labels: bug
 assignees: ''
 
 ---
